# app-manager

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
api_client/: Cargo.toml  README.md
api_client/.openapi-generator/: FILES
api_client/docs/: DownloadType.md  ManagerApi.md  RebootQueryParam.md  SoftwareOptions.md
api_client/src/apis/: configuration.rs  manager_api.rs
api_client/src/models/: data_encryption_key.rs  download_type.rs  mod.rs  reboot_query_param.rs  server_name_text.rs  software_info.rs
app-manager/: Cargo.toml  build.rs
app-manager/src/: api.rs
app-manager/src/api/: model.rs
app-manager/src/config/: args.rs  info.rs
app-manager/src/server/: build.rs
crates/app-manager/: Cargo.toml  build.rs
crates/app-manager/src/: api.rs  client.rs  config.rs  lib.rs  main.rs  server.rs  utils.rs
crates/app-manager/src/api/: manager.rs  utils.rs
crates/app-manager/src/api/manager/: data.rs
crates/app-manager/src/config/: args.rs  file.rs  info.rs
crates/app-manager/src/server/: app.rs  backend_controller.rs  build.rs  client.rs  info.rs  mount.rs  reboot.rs  state.rs  update.rs
crates/app-manager/src/server/app/: private_routers.rs
crates/manager_api/: Cargo.toml
crates/manager_api/src/: lib.rs
crates/manager_api_client/: Cargo.toml  README.md
crates/manager_api_client/.openapi-generator/: FILES
crates/manager_api_client/docs/: BuildInfo.md  DataEncryptionKey.md  DownloadType.md  DownloadTypeQueryParam.md  ManagerApi.md  ResetDataQueryParam.md  ServerNameText.md  SoftwareInfo.md  SoftwareOptions.md  SoftwareOptionsQueryParam.md  SystemInfo.md  SystemInfoList.md
crates/manager_api_client/src/: lib.rs  manual_additions.rs
crates/manager_api_client/src/apis/: configuration.rs  manager_api.rs  mod.rs
crates/manager_api_client/src/models/: build_info.rs  command_output.rs  data_encryption_key.rs  download_type.rs  download_type_query_param.rs  mod.rs  reboot_query_param.rs  reset_data_query_param.rs  server_name_text.rs  software_info.rs  software_options.rs  software_options_query_param.rs  system_info.rs  system_info_list.rs
crates/manager_model/: Cargo.toml
crates/manager_model/src/: lib.rs  manager.rs
manager_api_client/: Cargo.toml  README.md
manager_api_client/.openapi-generator/: FILES
manager_api_client/docs/: BuildInfo.md  CommandOutput.md  ManagerApi.md  SoftwareInfo.md  SystemInfo.md
manager_api_client/src/apis/: manager_api.rs
manager_api_client/src/models/: build_info.rs  download_type.rs  download_type_query_param.rs  mod.rs  server_name_text.rs  software_options_query_param.rs
src/: api.rs  config.rs  main.rs  server.rs  utils.rs
src/api/: manager.rs  utils.rs
src/api/manager/: data.rs
src/config/: args.rs  file.rs  info.rs
src/server/: app.rs  backend_controller.rs  build.rs  client.rs  info.rs  mount.rs  reboot.rs  update.rs
src/server/app/: private_routers.rs
tools/: pre-build-script-for-backend.sh  request-update.sh
