[workspace]
resolver = "2"
members = [
    "crates/app-manager",
    "crates/manager_api_client",
    "crates/manager_model",
    "crates/manager_api",
]

[workspace.dependencies]

vergen-gitcl = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

error-stack = "0.4.1"
thiserror = "1.0.56"

time = "0.3.33"
clap = { version = "4.4.18", features = ["cargo", "derive"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.9"

futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

reqwest = { version = "0.12.5", features = ["json"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
url = { version = "2.5.0", features = ["serde"] }
headers = "0.4.0"
jsonwebtoken = "9.2.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
axum = { version = "0.7.4", features = ["ws", "macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }

# Server TLS
tokio-rustls = "0.25.0"
rustls-pemfile = "2.0.0"
