[workspace]
resolver = "2"
members = [
    "crates/app-manager",
    "crates/manager_api_client",
    "crates/manager_model",
    "crates/manager_api",
]

[workspace.dependencies]

vergen-gitcl = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

error-stack = "0.5.0"
thiserror = "1.0.63"

time = "0.3.36"
clap = { version = "4.5.16", features = ["cargo", "derive"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
toml = "0.8.19"

futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }

reqwest = { version = "0.12.5", features = ["json"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
url = { version = "2.5.2", features = ["serde"] }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }

# Server TLS
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
