[package]
name = "app-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }
toml = "0.7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6", features = ["headers", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.3.8"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }

# Server TLS
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"

utoipa = { version = "3.0.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }

thiserror = "1.0.37"
error-stack = "0.4"

time = { version = "0.3.20" }

manager_api = { path = "../manager_api" }
manager_model = { path = "../manager_model" }

[build-dependencies]
vergen = { version = "8.0.0", features = ["cargo", "git", "gitcl", "rustc"] }
