[package]
name = "app-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }
error-stack = { workspace = true }

time = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

reqwest = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
url = { workspace = true, features = ["serde"] }
headers = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# Server TLS
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

manager_api = { path = "../manager_api" }
manager_model = { path = "../manager_model" }

[build-dependencies]
vergen = { workspace = true, features = ["cargo", "git", "gitcl", "rustc"] }
