[package]
name = "app-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }
error-stack = { workspace = true }

time = { workspace = true }
clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }

reqwest = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
url = { workspace = true }
headers = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Server TLS
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

manager_api = { path = "../manager_api" }
manager_model = { path = "../manager_model" }

[build-dependencies]
vergen-gitcl = { workspace = true }
