[package]
name = "manager_model"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "3.0.1", features = ["axum_extras", "uuid"] }
