[package]
name = "manager_model"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }

serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
